--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -7,3 +7,19 @@ h1,p {
 	margin-right: 10%;
 }
 
+img.headshot {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	opacity: 0.95;
+	z-index: -1;
+}
+
+img.cloud {
+	position: relative;
+	top: -600px;
+	left: 600px;
+	height: 20%;
+	width: 20%;
+}
+
