--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -1,4 +1,4 @@
-h1,p {
+h1 {
 	text-align: center;
 }
 
@@ -17,9 +17,16 @@ img.headshot {
 
 img.cloud {
 	position: relative;
-	top: -600px;
-	left: 600px;
+	top: -540px;
+	left: 700px;
 	height: 20%;
 	width: 20%;
 }
 
+h1.question {
+	border-style: solid;
+	border-width: 5px;
+	border-color: #a1a1a1;
+	border-radius: 25px;
+	background-color: #dddddd;
+}
