--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -1,13 +1,15 @@
-h1 {
-	text-align: center;
-}
-
 #container {
 	margin-left: 10%;
 	margin-right: 10%;
 }
 
+div#questions {
+	position: relative;
+	top: -100px;
+}
+
 img.headshot {
+	width: 50%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -23,10 +25,18 @@ img.cloud {
 	width: 20%;
 }
 
+h1, #title {
+	text-align: center;
+}
+
 h1.question {
 	border-style: solid;
-	border-width: 5px;
-	border-color: #a1a1a1;
+	border-width: 3px;
+	border-color: #0099FF;
 	border-radius: 25px;
-	background-color: #dddddd;
+	background-color: #b2e0ff;
+}
+
+h1#title {
+	text-decoration: underline;
 }
